# text-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  task.md
include/: codeeditor.h  document.h  editor.h  mainwindow.h  pomodoro_timer.h  pomodorotimer.h  syntax_highlighter.h  syntaxhighlighter.h
src/: codeeditor.cpp  document.cpp  editor.cpp  main.cpp  mainwindow.cpp  pomodoro_timer.cpp  pomodorotimer.cpp  syntax_highlighter.cpp  syntaxhighlighter.cpp
tests/: CMakeLists.txt  scenarios.txt  test_main.cpp
tests/helpers/: test_mainwindow.h  test_utils.h
tests/scenarios/: scenario_basic_edit.cpp  scenario_open_find_save.cpp  scenario_pomodoro_flow.cpp
tests/unit/: test_codeeditor.cpp  test_mainwindow.cpp  test_pomodorotimer.cpp  test_syntaxhighlighter.cpp
